// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalActions primary and secondary renders as expected 1`] = `
<body>
  <div>
    <div
      class="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
    >
      <div
        class="flex-child-no-shrink"
      >
        <button
          aria-label="Okay"
          class="btn btn--blue round-full py6 px24 txt-s"
          tabindex="0"
          type="button"
        >
          Okay
        </button>
      </div>
      <div
        class="flex-child-no-shrink mr12"
      >
        <button
          aria-label="Cancel"
          class="btn btn--gray btn--stroke round-full py6 px24 txt-s"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalActions primary and tertiary renders as expected 1`] = `
<body>
  <div>
    <div
      class="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
    >
      <div
        class="flex-child-no-shrink"
      >
        <button
          aria-label="Okay"
          class="btn btn--blue round-full py6 px24 txt-s"
          tabindex="0"
          type="button"
        >
          Okay
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalActions primary only renders as expected 1`] = `
<body>
  <div>
    <div
      class="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
    >
      <div
        class="flex-child-no-shrink"
      >
        <button
          aria-label="Okay"
          class="btn btn--blue round-full py6 px24 txt-s"
          tabindex="0"
          type="button"
        >
          Okay
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalActions primary, secondary and tertiary renders as expected 1`] = `
<body>
  <div>
    <div
      class="flex flex--center-main flex--center-cross flex--row-reverse flex--wrap"
    >
      <div
        class="flex-child-no-shrink"
      >
        <button
          aria-label="Okay"
          class="btn btn--blue round-full py6 px24 txt-s"
          tabindex="0"
          type="button"
        >
          Okay
        </button>
      </div>
      <div
        class="flex-child-no-shrink mr12"
      >
        <button
          aria-label="Cancel"
          class="btn btn--gray btn--stroke round-full py6 px24 txt-s"
          type="button"
        >
          Cancel
        </button>
      </div>
      <div
        class="flex-child-no-shrink mr12"
      >
        <button
          aria-label="tertiary"
          class="btn btn--transparent link link--gray transition round-full py12 px24 txt-s"
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</body>
`;
